--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -21,7 +21,7 @@ on:
 
 env:
   PROJECT_ID: ${{ secrets.RUN_PROJECT }}
-  RUN_REGION: eu-north1
+  RUN_REGION: europe-north1
   SERVICE_NAME: snuggleos
 
 jobs:
