--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -17,12 +17,7 @@ name: Build and Deploy to Cloud Run
 on:
   push:
     branches:
-    - master
-
-env:
-  PROJECT_ID: ${{ secrets.RUN_PROJECT }}
-  RUN_REGION: europe-north1
-  SERVICE_NAME: snuggleos
+      - master
 
 jobs:
   setup-build-deploy:
@@ -30,29 +25,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    # Setup gcloud CLI
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-      with:
-        version: '290.0.1'
-        service_account_key: ${{ secrets.RUN_SA_KEY }}
-        project_id: ${{ secrets.RUN_PROJECT }}
+      # Setup gcloud CLI
+      - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+        with:
+          version: "292.0.0"
+          service_account_key: ${{ secrets.RUN_SA_KEY }}
+          project_id: ${{ secrets.RUN_PROJECT }}
+          export_default_credentials: true
 
-    # Build and push image to Google Container Registry
-    - name: Build
-      run: |-
-        gcloud builds submit \
-          --quiet \
-          --tag "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA"
+      - name: Set up terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 0.12.25
 
-    # Deploy image to Cloud Run
-    - name: Deploy
-      run: |-
-        gcloud run deploy "$SERVICE_NAME" \
-          --quiet \
-          --region "$RUN_REGION" \
-          --image "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA" \
-          --platform "managed" \
-          --allow-unauthenticated
+      # Build and push image to Google Container Registry
+      - name: Build
+        run: |-
+          gcloud builds submit \
+            --quiet \
+            --tag "gcr.io/${{ secrets.RUN_PROJECT }}/snuggleos:$GITHUB_SHA"
+
+      # Deploy image to Cloud Run
+      - name: Deploy (using terraform)
+        working-directory: terraform/
+        run: |
+          terraform init
+          terraform workspace select ${GITHUB_REF##*/} || terraform workspace new ${GITHUB_REF##*/}
+          terraform apply -auto-approve
+        env:
+          TF_VAR_git_sha: ${{ github.sha }}
+          TF_VAR_project_id: ${{ secrets.RUN_PROJECT }}
